# screenshot-backend

./: .env  Cargo.toml  README.md  Rocket.toml  \  rustfmt.toml  todo.md
.githooks/: pre-commit
src/: config.rs  main.rs
src/api/: file.rs
src/frontend/: file.rs
