[package]
name = "screenshot-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
magic = "0.13.0"
sha256 = "1.0.3"
tokio = { version = "1.23.0", features = ["full"] }
warp = { version = "0.3.3", features = ["tls", "compression", "compression-brotli", "compression-gzip", "async-compression"] }
