[package]
name = "screenshot-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magic = "0.13.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sha256 = "1.1.2"
tls = "0.0.3"
tokio = { version = "1.27.0", features = ["full"] }
warp = { version = "0.3.3", features = ["compression", "tls", "async-compression"] }

